--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
-data/olivines_iurii
-data/spinel_iurii
+data/olivines_iurii/
+data/spinel_iurii/
+data/olivines_iurii_unmod/
+data/spinel_iurii_unmod/
+code/env
+data/
