Workchain works. Now using DFT+U+V opt. structures.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ data/olivines_iurii/
 data/spinel_iurii/
 data/olivines_iurii_unmod/
 data/spinel_iurii_unmod/
-code/env
+code/env-bat_uv_ml
 data/
 .history/
 .vscode/
