--- a/code/hubbard_overrides.yaml
+++ b/code/hubbard_overrides.yaml
@@ -2,7 +2,7 @@ clean_workdir: False
 meta_convergence: True
 tolerance_onsite: 0.1
 tolerance_intersite: 0.01
-skip_first_relax: False
+skip_first_relax: True
 scf:
   clean_workdir: False
   kpoints_distance: 0.3
