wfc and rhoc were wrongly set in control.
Should work now. Also, tried out config class inheriting from structure
and from cathode, but actually that's not really what we want. Rather,
just use it as container for the set of configurations.

--- a/code/yaml_files/olivine_iurii.yaml
+++ b/code/yaml_files/olivine_iurii.yaml
@@ -7,7 +7,7 @@ scf:
   clean_workdir: False
   pw:
     parameters:
-      CONTROL:
+      SYSTEM:
         ecutwfc: 110 # Was lower in Iurii's input, but use same here as for relax
         ecutrho: 1320 # Was lower in Iurii's input, but use same here as for relax
       ELECTRONS:
