A bit more structure and ipynb cleaning on commit.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-data/olivines_iurii/
+data/olivine_iurii/
 data/spinel_iurii/
-data/olivines_iurii_unmod/
-data/spinel_iurii_unmod/
 code/env-bat_uv_ml
-data/
 .history/
 .vscode/
 code/si_band_structure.pdf
