Last try with notebook output cleaning.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
-*.ipynb filter=strip-notebook-output
+*.ipynb filter=nb-clean
+# *.ipynb filter=strip-notebook-output
 # *.ipynb filter=nbstripout
 # *.zpln filter=nbstripout
 # *.ipynb diff=ipynb
