--- a/code/yaml_files/only_force_thr.yaml
+++ b/code/yaml_files/only_force_thr.yaml
@@ -5,8 +5,22 @@ tolerance_intersite: 0.01
 skip_first_relax: True
 scf:
   clean_workdir: False
+  pw: settings:
+      cmdline:
+        - "-nk"
+        - "4"
 relax:
   clean_workdir: False
+  base:
+    pw:
+      parameters:
+        CONTROL:
+          nstep: 200
+          forc_conv_thr: 5.e-5
+      settings:
+        cmdline:
+          - "-nk"
+          - "4"
 hubbard:
   clean_workdir: False
   hp:
