Resolved ordering of configs and SSSP selection.
Atomic ordering of configurations returned from pybat was off due to
.get_sorted_structure_call(). Setting PP family to SSSP v1.2 PBEsol in
the overrides.

--- a/code/yaml_files/basically_empty_overrides.yaml
+++ b/code/yaml_files/basically_empty_overrides.yaml
@@ -5,8 +5,10 @@ tolerance_intersite: 0.01
 skip_first_relax: True
 scf:
   clean_workdir: False
+  pseudo_family: 'SSSP/1.2/PBEsol/efficiency'
 relax:
   clean_workdir: False
+  pseudo_family: 'SSSP/1.2/PBEsol/efficiency'
 hubbard:
   clean_workdir: False
   hp:
