--- a/code/yaml_files/serial_overrides.yaml
+++ b/code/yaml_files/serial_overrides.yaml
@@ -3,30 +3,31 @@ meta_convergence: True
 tolerance_onsite: 0.1
 tolerance_intersite: 0.01
 skip_first_relax: True
-parallelize_atoms: True
+parallelize_atoms: False
+parallelize_qpoints: False
 scf:
   clean_workdir: False
   pseudo_family: "SSSP/1.2/PBEsol/efficiency"
-  pw:
-    kpoints_distance: 0.6
-    # settings:
-    #   cmdline:
-    #     - "-nk"
-    #     - "4"
+  # pw:
+  #   kpoints_distance: 0.6
+  # settings:
+  #   cmdline:
+  #     - "-nk"
+  #     - "4"
 relax:
   clean_workdir: False
   pseudo_family: "SSSP/1.2/PBEsol/efficiency"
-  base:
-    pw:
-      kpoints_distance: 0.3
-      parameters:
-        CONTROL:
-          nstep: 200
-          forc_conv_thr: 5.e-5
-      # settings:
-      #   cmdline:
-      #     - "-nk"
-      #     - "4"
+  # base:
+  #   pw:
+  #     kpoints_distance: 0.3
+  #     parameters:
+  #       CONTROL:
+  #         nstep: 200
+  #         forc_conv_thr: 5.e-5
+  # settings:
+  #   cmdline:
+  #     - "-nk"
+  #     - "4"
 hubbard:
   clean_workdir: False
   # hp:
